Adicionado aplicattion.properties de m1 e m2

--- a/microservico2/src/main/resources/application.properties
+++ b/microservico2/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=microservico2
+springdoc.swagger-ui.path=/swagger-ui.html
+server.servlet.context-path=/m2
+
+springdoc.swagger-ui.doc-expansion=none
+
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.writer-with-order-by-keys=true
+
+server.port=8081
