--- a/microservico1/src/main/resources/application.properties
+++ b/microservico1/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=microservico1
+
+springdoc.swagger-ui.path=/swagger-ui.html
+server.servlet.context-path=/m1
+
+springdoc.swagger-ui.doc-expansion=none
+
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.writer-with-order-by-keys=true
+
