--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -44,6 +44,8 @@ services:
     build:
       context: ./microservico1
       dockerfile: ./Dockerfile
+    depends_on:
+      - localstack
     ports:
       - "8080:8080"
     networks:
