Adicionado propriedades no arquivo application.properties no microservico 1 e microservico 2

--- a/microservico1/src/main/resources/application.properties
+++ b/microservico1/src/main/resources/application.properties
@@ -7,4 +7,16 @@ springdoc.swagger-ui.doc-expansion=none
 
 springdoc.swagger-ui.tagsSorter=alpha
 springdoc.writer-with-order-by-keys=true
+sqsQueueName=fila-message
 
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:file:./data/models
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
