--- a/microservico2/src/main/resources/application.properties
+++ b/microservico2/src/main/resources/application.properties
@@ -6,5 +6,5 @@ springdoc.swagger-ui.doc-expansion=none
 
 springdoc.swagger-ui.tagsSorter=alpha
 springdoc.writer-with-order-by-keys=true
-
+sqsQueueName=fila-message
 server.port=8081
